correct bug on select z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ select {
 .drop-content {
   display: none;
   position: absolute;
-  z-index: 10;
+  z-index: 15;
   top: calc(100% - 3px);
 
   width: 100%;
